chore: update sql queries
