# app/controllers/auth/login.go
@@ -1,6 +1,7 @@
 package auth
 
 import (
+	"instashop/app/models"
 	"instashop/infra/types"
 	"instashop/infra/validation"
 	"net/http"
@@ -8,24 +9,15 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
-type LoginInput struct {
-	Email    string `json:"email" validate:"required"`
-	Password string `json:"password" validate:"required"`
-}
-type LoginResponse struct {
-	UserId      string `json:"UserId"`
-	AccessToken string `json:"password"`
-}
-
 // @Tags		Auth_Login
-// @Success	200		{object}	LoginResponse	"success"
-// @Param		request	body		LoginInput		true	"Auth_Login"
+// @Success	200		{object}	models.LoginResponse	"success"
+// @Param		request	body		models.LoginInput		true	"Auth_Login"
 // @Router		/auth/login [POST]
 // @Accept		json
 // @Produce	json
 // @Failure	400	{object}	types.ErrMsg	"error"
 func AuthLogin(c echo.Context) error {
-	dto := new(LoginInput)
+	dto := new(models.LoginInput)
 
 	if err := validation.BindAndValidate(c, dto); err != nil {
 		return c.JSON(http.StatusBadRequest, types.ErrMsg{
